# todolist

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: implement.md  plan.md  specify.md  tasks.md
docs/: adr-001-stack.md  adr-002-unicode-search.md  adr-003-enums-module.md  adr-004-coluna-kanban-fk.md  adr-005-schema-versioning.md  code-review.md  constitution.md  funcionalidades.md  plano-testes.md  tasks.md
docs/specs/007-busca-todo-list/: plan.md  spec.md  tasks.md
docs/specs/010-criar-card-kanban/: plan.md  (+2 more)
src/own_board_list/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_main.py
tests/test_database/: __init__.py  test_backup_quarantine.py  test_column_repository.py  test_connection.py  test_migrations.py  test_sql_constraints.py  test_task_repository.py
tests/test_integration/: __init__.py  conftest.py  test_fluxo_busca.py  test_fluxo_completo.py  test_kanban_create_card.py  test_kanban_create_card_slow.py  test_migration_slow.py  test_performance_busca.py  test_ui_service_integration.py
tests/test_models/: __init__.py  test_domain_schema_consistency.py  test_kanban_column.py  test_task.py
tests/test_services/: __init__.py  test_task_service.py
tests/test_ui/: __init__.py  conftest.py  test_confirm_dialog.py  test_inline_task_form.py  test_kanban_card_widget.py  test_kanban_column_inline.py  test_kanban_column_widget.py  test_kanban_widget.py  test_main_window.py  test_splash.py  test_task_form.py  test_task_list_item.py  test_todo_widget.py  test_todo_widget_busca.py
(+40 files in other folders)
