[project]
name = "own-board-list"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["PyQt6>=6.6.0"]

[project.scripts]
own-board-list = "own_board_list.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/own_board_list"]

[tool.ruff]
line-length = 88
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
qt_api = "pyqt6"
markers = [
    "slow: testes lentos (performance, carga) — usar pytest -m slow para executar",
    "integration: testes de integração UI+Service+DB",
]

[dependency-groups]
dev = ["pytest>=7", "pytest-qt>=4", "pytest-cov>=4", "ruff>=0.4", "mypy>=1.9"]
